<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="add">Adicionar</string>
    <string name="added">Adicionado</string>
    <string name="addProject">Adicionar projeto</string>
    <string name="addStakeholder">Adicionar stakeholder</string>
    <string name="app_name">Comunicações</string>
    <string name="email">E-mail</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="manage_stakeholders">Gerenciar stakeholders</string>
    <string name="name">Nome</string>
    <string name="password">Senha</string>
    <string name="phone">Telefone</string>
    <string name="photo">Foto</string>
    <string name="usuario">Usuário</string>
    <string name="remove">Remover</string>
    <string name="edit">Editar</string>
    <string name="grant_permissions">Atribuir permissões</string>
    <string name="manage_projects">Gerenciar projetos</string>
    <string name="start">Início</string>
    <string name="end">Término</string>
    <string name="attach_stakeholders">Vincular stakeholders</string>
    <string name="project_removed">Projeto removido</string>
    <string name="project_added">Projeto adicionado</string>
    <string name="edited">Editado</string>
    <string name="shouldSelectAnItem">Voce deve selecionar pelo menos um item</string>
    <string name="selectAnItem">Selecione um item</string>
    <string name="street">Rua</string>
    <string name="number">Número</string>
    <string name="Neighbourhood">Bairro</string>
    <string name="postalCode">CEP</string>
    <string name="city">Cidade</string>
    <string name="country">País</string>
    <string name="state">Estado</string>
    <string name="address">Endereço</string>
    <string name="removeStakeholders">Remover stakeholders</string>

</resources>