<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/widget_margin"
            android:contentDescription="@string/photo"
            android:onClick="loadPhoto"
            android:src="@drawable/ic_photo" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/widget_margin"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/edtLoginStakeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/widget_margin"
            android:hint="@string/login" />

        <EditText
            android:id="@+id/edtPasswordStakeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/widget_margin"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/widget_margin"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/widget_margin"
            android:hint="@string/phone"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnAddOrEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addOrEditStakeholder"
            android:text="@string/add" />
    </LinearLayout>

</ScrollView>